--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,35 @@
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/DrawerLayout"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/framelayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:elevation="7dp">
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".MainActivity">
-        <!--toolbar-->
-        <include
-            android:id="@+id/tool_bar"
-            layout="@layout/tool_bar"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            />
+        android:layout_width="match_parent"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/toolbar_container"
+        android:background="@color/ColorPrimary"
+        android:orientation="vertical">
 
-        <!--Sliding tab-->
+        <android.support.v7.widget.Toolbar
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_height="?attr/actionBarSize"
+            android:id="@+id/tool_bar"
+            android:layout_width="match_parent"
+            android:background="@color/ColorPrimary"
+            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
+            android:elevation="2dp"/>
+
         <com.google.samples.apps.iosched.ui.widget.SlidingTabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/tabsHeight"
             android:elevation="2dp"
             android:background="@color/ColorPrimary"/>
+        </LinearLayout>
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            />
-    </LinearLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rec_view_nav_draw"
-        android:layout_width="320dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="left"
-        android:background="#ffffff"
-        android:scrollbars="vertical">
-    </android.support.v7.widget.RecyclerView>
-
-</android.support.v4.widget.DrawerLayout>
+</FrameLayout>
