--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -21,6 +21,7 @@
         android:id="@+id/name_textView"
         android:layout_alignParentTop="true"/>
     <TextView
+        android:fontFamily="sans-serif-light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/name_textView"
